--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
 body {
   margin: 0;
   font-size: 100%;
+  font-family: Roboto, sans-serif;
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
 }
 
 </style>
